--- a/running.html
+++ b/running.html
@@ -1,5 +1,5 @@
-<!doctype html>
-<html lang="en-US">
+<!DOCTYPE html>
+<html lang="en">
 
 <head>
 <meta charset="UTF-8">
@@ -22,7 +22,7 @@ content="width=device-width, initial-scale=1.0">
 <body>
 
 <ul>
-	<li><a href="index.html">Home</a></li>
+	<li><a href="index.html">Colombia Soccer</a></li>
 	<li><a href="running.html">Trail Running</a></li>
 	<li><a href='box_model.html'>CSS Box Model</a></li>
 </ul>
@@ -116,5 +116,14 @@ width="685" height="385">
 </table>
 </div>
 
+<p>
+<a href="http://jigsaw.w3.org/css-validator/check/referer">
+    <img style="border:0;width:88px;height:31px"
+        src="http://jigsaw.w3.org/css-validator/images/vcss-blue"
+        alt="Valid CSS!" />
+    </a>
+</p>
+
 </body>
+
 </html>
