--- a/box_model.html
+++ b/box_model.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en-US">
+<html lang="en">
 
 <head>
 <meta charset="UTF-8">
@@ -27,12 +27,12 @@ content="width=device-width, initial-scale=1.0">
 <body>
 
 <ul>
-	<li><a href="index.html">Home</a></li>
+	<li><a href="index.html">Colombia Soccer</a></li>
 	<li><a href="running.html">Trail Running</a></li>
 	<li><a href='box_model.html'>CSS Box Model</a></li>
 </ul>
 
-<h1> The CSS Box Model</h1>
+<h1> All about </h1>
 
 <p >The CSS box model identifies the four parts of the HTML element that 
 can be styled. Let's consider each part.</p>
@@ -142,6 +142,12 @@ width="646" height="566">
 
 </div>
 
-
+<p>
+<a href="http://jigsaw.w3.org/css-validator/check/referer">
+    <img style="border:0;width:88px;height:31px"
+        src="http://jigsaw.w3.org/css-validator/images/vcss-blue"
+        alt="Valid CSS!" />
+    </a>
+</p>
 
 </body>
