--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <h2>The Context</h2>
 <p>I am from Bogota, Colombia. Colombia, which is spelled with two o's, is located in South America. Colombians pride themselves on their national soccer team. Many of us as children grew up walking to a nearby soccer field and spending a significant amount of time there daily. I believe this has led to the development of incredible players forming the great team we have now.</p>
 
-<img src="resources/Colombia.jpg" alt="Colombian Flag" title="Map of Colombia with flag" width="513" height="600">
+<img src="resources/colombia.jpg" alt="Colombian Flag" title="Map of Colombia with flag" width="513" height="600">
 <img src="resources/field.jpg" alt="Local Soccer Field" title="Picture of local soccer field" width="389" height="259">
 
 <h2>The 2024 Copa America</h2>
